# shop-datawarehouse

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-cloud-run.yml  terraform.yml
scripts/: README.md  local-docker-test.sh  run-local.sh
src/: main.py
terraform/: README.md  apis.tf  artifact_registry.tf  cloud_run.tf  iam.tf  main.tf  outputs.tf  provider.tf  service_accounts.tf  terraform.tfvars.example  variables.tf  workload_identity.tf
tests/: test_api.py
