[project]
name = "shop-datawarehouse"
version = "0.1.0"
description = "Cloud Run application for querying parquet files from GCS using Polars"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.18.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-cloud-storage>=2.18.0",
    "fsspec>=2024.10.0",
    "gcsfs>=2024.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
